  were deprecated in 4.3 have been removed completely. (hossman)

* SOLR-4792: Stop shipping a .war. (Robert Muir)

==================  4.7.0 ==================

Versions of Major Components
---------------------
Apache Tika 1.4
Carrot2 3.8.0
Velocity 1.7 and Velocity Tools 2.0
Apache UIMA 2.3.1
Apache ZooKeeper 3.4.5

Upgrading from Solr 4.6.0
----------------------
                      
                      
Detailed Change List
----------------------

New Features
----------------------

* SOLR-5308: A new 'migrate' collection API to split all documents with a
  route key into another collection (shalin)

* SOLR-5441: Expose number of transaction log files and their size via JMX.
  (Rafał Kuć via shalin)

* SOLR-5320: Added support for tri-level compositeId routing.
  (Anshum Gupta via shalin)
  
* SOLR-5287: You can edit files in the conf directory from the admin UI 
  (Erick Erickson, Stefan Matheis)

* SOLR-5447, SOLR-5490: Add a QParserPlugin for Lucene's SimpleQueryParser.
  (Jack Conradson via shalin)

* SOLR-5446: Admin UI - Allow changing Schema and Config (steffkes)

* SOLR-5456: Admin UI - Allow creating new Files (steffkes)

* SOLR-5208: Support for the setting of core.properties key/values at create-time on 
  Collections API (Erick Erickson)

* SOLR-5428: New 'stats.calcdistinct' parameter in StatsComponent returns
  set of distinct values and their count. This can also be specified per field
  e.g. 'f.field.stats.calcdistinct'. (Elran Dvir via shalin)

* SOLR-5378: A new SuggestComponent that fully utilizes the Lucene suggester
  module and adds pluggable dictionaries, payloads and better distributed support.
  This is intended to eventually replace the Suggester support through the
  SpellCheckComponent. (Areek Zillur, Varun Thacker via shalin)

* SOLR-5492: Return the replica that actually served the query in shards.info
  response. (shalin)

* SOLR-5506: Support docValues in CollationField and ICUCollationField.
  (Robert Muir)
  